--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "management-system",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html",
@@ -17,6 +16,7 @@
     "parcel": "^2.13.3",
     "postcss": "^8.4.49",
     "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1"
   },
